[package]
name = "portscanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0"

[[bin]]
name = "portscanner"
path = "src/main.rs"
